Fix Woo account column alignment

--- a/themes/astra/assets/css/muukal-account.css
+++ b/themes/astra/assets/css/muukal-account.css
@@ -24,9 +24,17 @@
 	float: none;
 	width: auto;
 	margin: 0;
+	clear: none;
+}
+
+.woocommerce-account #customer_login .u-column1 {
+	grid-column: 1;
+	grid-row: 1;
 }
 
 .woocommerce-account #customer_login .u-column2 {
+	grid-column: 2;
+	grid-row: 1;
 	padding-left: 56px;
 	border-left: 1px solid #e4e4e4;
 }
